# hr-analytics-pipeline

./: .gitignore  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: data_dictionary.md  validation_report.md
notebooks/: pharma_analysis_simple.ipynb
scripts/: generate_data.py  inject_dirty_data.py
