[project]
name = "hr-analytics-pipeline"
version = "0.1.0"
description = "End-to-end HR analytics pipeline — Talent Marketplace portfolio project"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "plotly>=5.18",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = []